Naive fix for overlapping footer when not fixed

--- a/surfers/static/style.css
+++ b/surfers/static/style.css
@@ -4,8 +4,7 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  padding-bottom: 60px;
   padding-top: 60px;
 }
 
